Remove -XX:MaxPermSize option as it's ignored since Java 8.